--- a/android_app/app/src/main/res/layout/main.xml
+++ b/android_app/app/src/main/res/layout/main.xml
@@ -1,7 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/llSY"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
@@ -444,117 +442,23 @@
 
     </ScrollView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:layout_gravity="bottom"
-        android:background="@null"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:id="@+id/llSY_Bottom"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:paddingTop="8dp"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivSY"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center|bottom"
-                android:adjustViewBounds="true"
-                android:src="@drawable/dbcd_sy_active" />
-
-            <TextView
-                android:id="@+id/tvSY"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="首页"
-                android:textAlignment="center" />
-
+    <LinearLayout style="@style/ll_dbcd">
+        <LinearLayout android:id="@+id/llSY" style="@style/ll_dbcd_item">
+            <ImageView android:id="@+id/ivSY" style="@style/iv_dbcd_item" android:src="@drawable/dbcd_sy" />
+            <TextView android:id="@+id/tvSY" style="@style/tv_dbcd_item" android:text="首页" />
         </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llFB"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:paddingTop="8dp"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivFB"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center"
-                android:adjustViewBounds="true"
-                android:src="@drawable/dbcd_fb" />
-
-            <TextView
-                android:id="@+id/tvFB"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="发布"
-                android:textAlignment="center" />
-
+        <LinearLayout android:id="@+id/llFB" style="@style/ll_dbcd_item">
+            <ImageView android:id="@+id/ivFB" style="@style/iv_dbcd_item" android:src="@drawable/dbcd_fb" />
+            <TextView android:id="@+id/tvFB" style="@style/tv_dbcd_item" android:text="发布" />
         </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llXX"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:paddingTop="8dp"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivXX"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center"
-                android:adjustViewBounds="true"
-                android:src="@drawable/dbcd_xx" />
-
-            <TextView
-                android:id="@+id/tvXX"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="消息"
-                android:textAlignment="center" />
-
+        <LinearLayout android:id="@+id/llXX" style="@style/ll_dbcd_item">
+            <ImageView android:id="@+id/ivXX" style="@style/iv_dbcd_item" android:src="@drawable/dbcd_xx" />
+            <TextView android:id="@+id/tvXX" style="@style/tv_dbcd_item" android:text="消息" />
         </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llGRZX"
-            android:layout_width="100dp"
-            android:layout_height="75dp"
-            android:layout_gravity="left|bottom"
-            android:paddingTop="8dp"
-            android:background="@null"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/ivGRZX"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_gravity="center"
-                android:adjustViewBounds="true"
-                android:src="@drawable/dbcd_grzx" />
-
-            <TextView
-                android:id="@+id/tvGRZX"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="个人中心"
-                android:textAlignment="center" />
-
+        <LinearLayout android:id="@+id/llGRZX" style="@style/ll_dbcd_item">
+            <ImageView android:id="@+id/ivGRZX" style="@style/iv_dbcd_item" android:src="@drawable/dbcd_grzx" />
+            <TextView android:id="@+id/tvGRZX" style="@style/tv_dbcd_item" android:text="个人中心" />
         </LinearLayout>
-
     </LinearLayout>
 
 </LinearLayout>
