--- a/android_app/app/src/main/res/layout/yhdl.xml
+++ b/android_app/app/src/main/res/layout/yhdl.xml
@@ -1,112 +1,21 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:baselineAligned="false"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:weightSum="1"
-    tools:context="com.example.administrator.infotownletsecond.YHDLActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" style="@style/ll_yhdl_root" tools:context="com.example.administrator.infotownletsecond.YHDLActivity">
 
-    <!-- Login progress -->
-
-    <LinearLayout
-        android:layout_width="441dp"
-        android:layout_height="50dp"
-        android:background="@null"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tvGB"
-            android:layout_marginLeft="76dp"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_gravity="left|center_vertical"
-            android:text="X" />
-
-        <TextView
-            android:id="@+id/tvZC"
-            android:layout_marginLeft="236dp"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_gravity="right|center_vertical"
-            android:text="注册" />
-
+    <LinearLayout style="@style/ll_yhdl_top">
+        <TextView android:id="@+id/tvGB" style="@style/tv_top_gb" android:text="X" />
+        <TextView android:id="@+id/tvZC" style="@style/tv_top_zc" android:text="注册" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/etLOGO"
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="风铃网"
-        android:textAlignment="center"
-        android:textColor="#bc6ba6"
-        android:textSize="40dp" />
+    <TextView android:id="@+id/tvlogo" style="@style/tv_yhdl_logo" android:text="风铃网" />
 
-    <EditText
-        android:id="@+id/etSJH"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/border"
-        android:hint="手机号/用户名/邮箱"
-        android:maxLines="1"
-        android:textSize="22px" />
+    <EditText android:id="@+id/etSJH" style="@style/et_sjh" android:hint="手机号/用户名/邮箱" android:background="@drawable/border" />
 
-    <EditText
-        android:id="@+id/etMM"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/border"
-        android:textSize="22px"
-        android:maxLines="1"
-        android:hint="密码" />
+    <EditText android:id="@+id/etMM" style="@style/et_mm" android:hint="密码" android:background="@drawable/border" />
 
-    <Button
-        android:id="@+id/btnDL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#bc6ba6"
-        android:layout_marginTop="10dp"
-        android:text="登录"
-        android:textColor="#ffffff" />
+    <Button android:id="@+id/btnDL" style="@style/btn_dl" android:text="登录" />
 
-    <LinearLayout
-        android:layout_width="441dp"
-        android:layout_height="50dp"
-        android:background="@null"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tvSJDTMDL"
-            android:layout_marginLeft="76dp"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_gravity="left|center_vertical"
-            android:text="手机动态码登录" />
-
-        <TextView
-            android:id="@+id/tvWJMM"
-            android:layout_marginLeft="125dp"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_gravity="right|center_vertical"
-            android:text="忘记密码" />
-
+    <LinearLayout style="@style/ll_bottom">
+        <TextView android:id="@+id/tvSJDTMDL" style="@style/tv_sjdtmdl" android:text="手机动态码登录" />
+        <TextView android:id="@+id/tvWJMM" style="@style/tv_wjmm" android:text="忘记密码" />
     </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
 
 </LinearLayout>
