--- a/android_app/app/src/main/res/values/styles.xml
+++ b/android_app/app/src/main/res/values/styles.xml
@@ -21,14 +21,31 @@
         <item name="android:activityCloseExitAnimation">@anim/slide_right_out</item>
     </style>
 
-
-    <style name="textGRZX_GRFW">
-        <item name="android:textAlignment">center</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">27dp</item>
-    </style>
-
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="ll_dbcd">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">75dp</item>
+        <item name="android:layout_gravity">bottom</item>
+        <item name="android:orientation">horizontal</item>
+    </style>
+    <style name="ll_dbcd_item">
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">75dp</item>
+        <item name="android:layout_gravity">left|bottom</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+    <style name="iv_dbcd_item">
+        <item name="android:layout_width">27dp</item>
+        <item name="android:layout_height">27dp</item>
+        <item name="android:layout_gravity">center|bottom</item>
+        <item name="android:adjustViewBounds">true</item>
+    </style>
+    <style name="tv_dbcd_item">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">25dp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
 </resources>
