--- a/android_app/app/src/main/res/layout/sy_esf.xml
+++ b/android_app/app/src/main/res/layout/sy_esf.xml
@@ -1,299 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/llSY_ESF"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/llSY_ESF" style="@style/ll_sy_esf_root">
 
-    <ScrollView
-        android:id="@+id/sv_channel"
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:fillViewport="false"
-        android:scrollbars="none">
+    <ScrollView android:id="@+id/sv_channel" style="@style/sv_sy_esf_channel">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <LinearLayout style="@style/ll_sy_esf_main">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="10dp"
-                android:background="#bc6ba6"
-                android:orientation="horizontal">
-
-
-                <ImageView
-                    android:id="@+id/ivBACK"
-                    android:layout_width="18dp"
-                    android:layout_height="42dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:adjustViewBounds="true"
-                    android:background="#bc6ba6"
-                    android:src="@drawable/arrow_back" />
-
-                <TextView
-                    android:id="@+id/etSJH"
-                    android:layout_width="326dp"
-                    android:layout_height="42dp"
-                    android:textAlignment="center"
-                    android:layout_gravity="center"
-                    android:background="#bc6ba6"
-                    android:textColor="#FFFFFF"
-                    android:paddingLeft="5dp"
-                    android:paddingTop="8dp"
-                    android:text="二手房"
-                    android:textSize="20dp" />
-
+            <LinearLayout style="@style/ll_sy_esf_top">
+                <ImageView android:id="@+id/ivBACK" style="@style/iv_sy_esc_back" android:src="@drawable/arrow_back" />
+                <TextView android:id="@+id/etTitle" style="@style/tv_sy_esc_title" android:text="二手房" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:layout_gravity="bottom"
-                android:background="@null"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZF_ZZ"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZF_ZZ"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_esf_esf" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZF_ZZ"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="二手房"
-                        android:textAlignment="center" />
-
+            <LinearLayout style="@style/ll_sy_esc_fl_row">
+                <LinearLayout android:id="@+id/llSY_ZF_ZZ" style="@style/ll_sy_esc_fl_item">
+                    <ImageView android:id="@+id/ivSY_ZF_ZZ" style="@style/iv_sy_esc_fl_item" android:src="@drawable/sy_esf_esf" />
+                    <TextView android:id="@+id/tvSY_ZF_ZZ" style="@style/tv_sy_esc_fl_item" android:text="二手房" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZF_XF"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZF_XF"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_esf_xf" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZF_XF"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="新房"
-                        android:textAlignment="center" />
-
+                <LinearLayout android:id="@+id/llSY_ZF_XF" style="@style/ll_sy_esc_fl_item">
+                    <ImageView android:id="@+id/ivSY_ZF_XF" style="@style/iv_sy_esc_fl_item" android:src="@drawable/sy_esf_xf" />
+                    <TextView android:id="@+id/tvSY_ZF_XF" style="@style/tv_sy_esc_fl_item" android:text="新房" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llZP"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZF_HZ"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_esf_sp" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZF_HZ"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="商铺"
-                        android:textAlignment="center" />
-
+                <LinearLayout android:id="@+id/llZP" style="@style/ll_sy_esc_fl_item">
+                    <ImageView android:id="@+id/ivSY_ZF_HZ" style="@style/iv_sy_esc_fl_item" android:src="@drawable/sy_esf_sp" />
+                    <TextView android:id="@+id/tvSY_ZF_HZ" style="@style/tv_sy_esc_fl_item" android:text="商铺" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZF_DZ"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZF_DZ"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_esf_xzl" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZF_DZ"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="写字楼"
-                        android:textAlignment="center" />
-
+                <LinearLayout android:id="@+id/llSY_ZF_DZ" style="@style/ll_sy_esc_fl_item">
+                    <ImageView android:id="@+id/ivSY_ZF_DZ" style="@style/iv_sy_esc_fl_item" android:src="@drawable/sy_esf_xzl" />
+                    <TextView android:id="@+id/tvSY_ZF_DZ" style="@style/tv_sy_esc_fl_item" android:text="写字楼" />
                 </LinearLayout>
-
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:layout_gravity="bottom"
-                android:background="@null"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZF_CF"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZF_CF"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_esf_cf" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZF_CF"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="厂房"
-                        android:textAlignment="center" />
-
+            <LinearLayout style="@style/ll_sy_esc_fl_row">
+                <LinearLayout android:id="@+id/llSY_ZF_CF" style="@style/ll_sy_esc_fl_item">
+                    <ImageView android:id="@+id/ivSY_ZF_CF" style="@style/iv_sy_esc_fl_item" android:src="@drawable/sy_esf_cf" />
+                    <TextView android:id="@+id/tvSY_ZF_CF" style="@style/tv_sy_esc_fl_item" android:text="厂房" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZF_XZL"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZF_XZL"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_esf_ck" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZF_XZL"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="仓库"
-                        android:textAlignment="center" />
-
+                <LinearLayout android:id="@+id/llSY_ZF_XZL" style="@style/ll_sy_esc_fl_item">
+                    <ImageView android:id="@+id/ivSY_ZF_XZL" style="@style/iv_sy_esc_fl_item" android:src="@drawable/sy_esf_ck" />
+                    <TextView android:id="@+id/tvSY_ZF_XZL" style="@style/tv_sy_esc_fl_item" android:text="仓库" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZF_CW"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZF_CW"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_esf_cw" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZF_CW"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="车位"
-                        android:textAlignment="center" />
-
+                <LinearLayout android:id="@+id/llSY_ZF_CW" style="@style/ll_sy_esc_fl_item">
+                    <ImageView android:id="@+id/ivSY_ZF_CW" style="@style/iv_sy_esc_fl_item" android:src="@drawable/sy_esf_cw" />
+                    <TextView android:id="@+id/tvSY_ZF_CW" style="@style/tv_sy_esc_fl_item" android:text="车位" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZF_TD"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZF_TD"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_esf_td" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZF_TD"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="土地"
-                        android:textAlignment="center" />
-
+                <LinearLayout android:id="@+id/llSY_ZF_TD" style="@style/ll_sy_esc_fl_item">
+                    <ImageView android:id="@+id/ivSY_ZF_TD" style="@style/iv_sy_esc_fl_item" android:src="@drawable/sy_esf_td" />
+                    <TextView android:id="@+id/tvSY_ZF_TD" style="@style/tv_sy_esc_fl_item" android:text="土地" />
                 </LinearLayout>
-
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="410dp"
-                android:layout_height="48dp"
-                android:background="@null"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tvCNXH"
-                    android:layout_width="80dp"
-                    android:layout_height="48dp"
-                    android:layout_marginLeft="20dp"
-                    android:background="@null"
-                    android:paddingTop="13dp"
-                    android:text="猜你喜欢"
-                    android:textSize="15sp" />
-
+            <LinearLayout style="@style/ll_sy_esf_cnxh_top">
+                <TextView android:id="@+id/tvCNXH" style="@style/tv_sy_esf_cnxh_top" android:text="猜你喜欢" />
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/llCNXH"
-                android:layout_width="400dp"
-                android:layout_height="match_parent"
-                android:background="@null"
-                android:orientation="vertical">
+            <LinearLayout android:id="@+id/llCNXH" style="@style/ll_sy_esf_cnxh_content">
 
             </LinearLayout>
 
