--- a/android_app/app/src/main/res/layout/sy_jz.xml
+++ b/android_app/app/src/main/res/layout/sy_jz.xml
@@ -1,190 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/llSY_JZ"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/llSY_JZ" style="@style/ll_sy_jz_root">
 
-    <ScrollView
-        android:id="@+id/sv_channel"
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:fillViewport="false"
-        android:scrollbars="none">
+    <ScrollView android:id="@+id/sv_channel" style="@style/sv_sy_jz_channel">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <LinearLayout style="@style/ll_sy_jz_main">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="10dp"
-                android:background="#bc6ba6"
-                android:orientation="horizontal">
-
-
-                <ImageView
-                    android:id="@+id/ivBACK"
-                    android:layout_width="18dp"
-                    android:layout_height="42dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:adjustViewBounds="true"
-                    android:background="#bc6ba6"
-                    android:src="@drawable/arrow_back" />
-
-                <TextView
-                    android:id="@+id/etJZ"
-                    android:layout_width="326dp"
-                    android:layout_height="42dp"
-                    android:layout_gravity="center"
-                    android:background="#bc6ba6"
-                    android:paddingLeft="5dp"
-                    android:paddingTop="8dp"
-                    android:text="兼职"
-                    android:textAlignment="center"
-                    android:textColor="#FFFFFF"
-                    android:textSize="20dp" />
-
+            <LinearLayout style="@style/ll_sy_jz_top">
+                <ImageView android:id="@+id/ivBACK" style="@style/iv_sy_jz_back" android:src="@drawable/arrow_back" />
+                <TextView android:id="@+id/etJZ" style="@style/tv_sy_jz_title"  android:text="兼职" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:layout_gravity="bottom"
-                android:background="@null"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:id="@+id/llSY_JZ_FJGW"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_JZ_FJGW"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_jz_fjgw" />
-
-                    <TextView
-                        android:id="@+id/tvSY_JZ_FJGW"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="附近岗位"
-                        android:textAlignment="center" />
-
+            <LinearLayout style="@style/ll_sy_jz_fl_row">
+                <LinearLayout android:id="@+id/llSY_JZ_FJGW" style="@style/ll_sy_jz_fl_item">
+                    <ImageView android:id="@+id/ivSY_JZ_FJGW" style="@style/iv_sy_jz_fl_item" android:src="@drawable/sy_jz_fjgw" />
+                    <TextView android:id="@+id/tvSY_JZ_FJGW" style="@style/tv_sy_jz_fl_item" android:text="附近岗位" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_JZ_KPGW"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_JZ_KPGW"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_jz_kpgw" />
-
-                    <TextView
-                        android:id="@+id/tvSY_JZ_KPGW"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="靠谱岗位"
-                        android:textAlignment="center" />
-
+                <LinearLayout android:id="@+id/llSY_JZ_KPGW" style="@style/ll_sy_jz_fl_item">
+                    <ImageView android:id="@+id/ivSY_JZ_KPGW" style="@style/iv_sy_jz_fl_item" android:src="@drawable/sy_jz_kpgw" />
+                    <TextView android:id="@+id/tvSY_JZ_KPGW" style="@style/tv_sy_jz_fl_item" android:text="靠谱岗位" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llZP_JZ_ZMJZ"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_JZ_ZMJZ"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_jz_zmjz" />
-
-                    <TextView
-                        android:id="@+id/tvSY_JZ_ZMJZ"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="周末兼职"
-                        android:textAlignment="center" />
-
+                <LinearLayout android:id="@+id/llZP_JZ_ZMJZ" style="@style/ll_sy_jz_fl_item">
+                    <ImageView android:id="@+id/ivSY_JZ_ZMJZ" style="@style/iv_sy_jz_fl_item" android:src="@drawable/sy_jz_zmjz" />
+                    <TextView android:id="@+id/tvSY_JZ_ZMJZ" style="@style/tv_sy_jz_fl_item" android:text="周末兼职" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_JZ_XSRW"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_JZ_XSRW"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_jz_xsrw" />
-
-                    <TextView
-                        android:id="@+id/tvSY_JZ_XSRW"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="线上任务"
-                        android:textAlignment="center" />
-
+                <LinearLayout android:id="@+id/llSY_JZ_XSRW" style="@style/ll_sy_jz_fl_item">
+                    <ImageView android:id="@+id/ivSY_JZ_XSRW" style="@style/iv_sy_jz_fl_item" android:src="@drawable/sy_jz_xsrw" />
+                    <TextView android:id="@+id/tvSY_JZ_XSRW" style="@style/tv_sy_jz_fl_item" android:text="线上任务" />
                 </LinearLayout>
-
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="410dp"
-                android:layout_height="48dp"
-                android:background="@null"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tvRMTJ"
-                    android:layout_width="80dp"
-                    android:layout_height="48dp"
-                    android:layout_marginLeft="20dp"
-                    android:background="@null"
-                    android:paddingTop="13dp"
-                    android:text="热门推荐"
-                    android:textSize="15sp" />
-
+            <LinearLayout style="@style/ll_sy_jz_cnxh_top">
+                <TextView android:id="@+id/tvRMTJ" style="@style/tv_sy_jz_cnxh_top" android:text="热门推荐" />
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/llRMTJ"
-                android:layout_width="400dp"
-                android:layout_height="match_parent"
-                android:background="@null"
-                android:orientation="vertical">
+            <LinearLayout android:id="@+id/llRMTJ" style="@style/ll_sy_jz_cnxh_content">
 
             </LinearLayout>
 
