--- a/android_app/app/src/main/res/layout/sy_xc.xml
+++ b/android_app/app/src/main/res/layout/sy_xc.xml
@@ -1,190 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/llSY_XC"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/llSY_XC" style="@style/ll_sy_xc_root">
 
-    <ScrollView
-        android:id="@+id/sv_channel"
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:fillViewport="false"
-        android:scrollbars="none">
+    <ScrollView android:id="@+id/sv_channel" style="@style/sv_sy_xc_channel">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <LinearLayout style="@style/ll_sy_xc_main">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="10dp"
-                android:background="#bc6ba6"
-                android:orientation="horizontal">
-
-
-                <ImageView
-                    android:id="@+id/ivBACK"
-                    android:layout_width="18dp"
-                    android:layout_height="42dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:adjustViewBounds="true"
-                    android:background="#bc6ba6"
-                    android:src="@drawable/arrow_back" />
-
-                <TextView
-                    android:id="@+id/etXC"
-                    android:layout_width="326dp"
-                    android:layout_height="42dp"
-                    android:textAlignment="center"
-                    android:layout_gravity="center"
-                    android:background="#bc6ba6"
-                    android:textColor="#FFFFFF"
-                    android:paddingLeft="5dp"
-                    android:paddingTop="8dp"
-                    android:text="新车"
-                    android:textSize="20dp" />
-
+            <LinearLayout style="@style/ll_sy_xc_top">
+                <ImageView android:id="@+id/ivBACK" style="@style/iv_sy_xc_back" android:src="@drawable/arrow_back" />
+                <TextView android:id="@+id/etXC" style="@style/tv_sy_xc_title" android:text="新车" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:layout_gravity="bottom"
-                android:background="@null"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:id="@+id/llSY_CL_TJXC"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_CL_TJXC"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_xc_tjxc" />
-
-                    <TextView
-                        android:id="@+id/tvSY_CL_TJXC"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="条件选车"
-                        android:textAlignment="center" />
-
+            <LinearLayout style="@style/ll_sy_xc_fl_row">
+                <LinearLayout android:id="@+id/llSY_CL_TJXC" style="@style/ll_sy_xc_fl_item">
+                    <ImageView android:id="@+id/ivSY_CL_TJXC" style="@style/iv_sy_xc_fl_item" android:src="@drawable/sy_xc_tjxc" />
+                    <TextView android:id="@+id/tvSY_CL_TJXC" style="@style/tv_sy_xc_fl_item" android:text="条件选车" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_CL_DJXC"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_CL_DJXC"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_xc_djxc" />
-
-                    <TextView
-                        android:id="@+id/tvSY_CL_DJXC"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="底价新车"
-                        android:textAlignment="center" />
-
+                <LinearLayout android:id="@+id/llSY_CL_DJXC" style="@style/ll_sy_xc_fl_item">
+                    <ImageView android:id="@+id/ivSY_CL_DJXC" style="@style/iv_sy_xc_fl_item" android:src="@drawable/sy_xc_djxc" />
+                    <TextView android:id="@+id/tvSY_CL_DJXC" style="@style/tv_sy_xc_fl_item" android:text="底价新车" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_CL_SSXC"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_CL_SSXC"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_xc_ssxc" />
-
-                    <TextView
-                        android:id="@+id/tvSY_CL_SSXC"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="上市新车"
-                        android:textAlignment="center" />
-
+                <LinearLayout android:id="@+id/llSY_CL_SSXC" style="@style/ll_sy_xc_fl_item">
+                    <ImageView android:id="@+id/ivSY_CL_SSXC" style="@style/iv_sy_xc_fl_item" android:src="@drawable/sy_xc_ssxc" />
+                    <TextView android:id="@+id/tvSY_CL_SSXC" style="@style/tv_sy_xc_fl_item" android:text="上市新车" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_CL_ZXZX"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_CL_ZXZX"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_xc_zxzx" />
-
-                    <TextView
-                        android:id="@+id/tvSY_CL_ZXZX"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="最新资讯"
-                        android:textAlignment="center" />
-
+                <LinearLayout android:id="@+id/llSY_CL_ZXZX" style="@style/ll_sy_xc_fl_item">
+                    <ImageView android:id="@+id/ivSY_CL_ZXZX" style="@style/iv_sy_xc_fl_item" android:src="@drawable/sy_xc_zxzx" />
+                    <TextView android:id="@+id/tvSY_CL_ZXZX" style="@style/tv_sy_xc_fl_item" android:text="最新资讯" />
                 </LinearLayout>
-
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="410dp"
-                android:layout_height="48dp"
-                android:background="@null"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tvCNXH"
-                    android:layout_width="80dp"
-                    android:layout_height="48dp"
-                    android:layout_marginLeft="20dp"
-                    android:background="@null"
-                    android:paddingTop="13dp"
-                    android:text="猜你喜欢"
-                    android:textSize="15sp" />
-
+            <LinearLayout style="@style/ll_sy_xc_cnxh_top">
+                <TextView android:id="@+id/tvCNXH" style="@style/ll_sy_xc_cnxh_top" android:text="猜你喜欢" />
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/llCNXH"
-                android:layout_width="400dp"
-                android:layout_height="match_parent"
-                android:background="@null"
-                android:orientation="vertical">
+            <LinearLayout android:id="@+id/llCNXH" style="@style/ll_sy_xc_cnxh_content">
 
             </LinearLayout>
 
