--- a/android_app/app/src/main/res/layout/sy_zp.xml
+++ b/android_app/app/src/main/res/layout/sy_zp.xml
@@ -1,190 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/llSY_ZP"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/llSY_ZP" style="@style/ll_sy_zp_root">
 
-    <ScrollView
-        android:id="@+id/sv_channel"
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:fillViewport="false"
-        android:scrollbars="none">
+    <ScrollView android:id="@+id/sv_channel" style="@style/sv_sy_zp_channel">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <LinearLayout style="@style/ll_sy_zp_main">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="10dp"
-                android:background="#bc6ba6"
-                android:orientation="horizontal">
-
-
-                <ImageView
-                    android:id="@+id/ivBACK"
-                    android:layout_width="18dp"
-                    android:layout_height="42dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:adjustViewBounds="true"
-                    android:background="#bc6ba6"
-                    android:src="@drawable/arrow_back" />
-
-                <TextView
-                    android:id="@+id/etZP"
-                    android:layout_width="326dp"
-                    android:layout_height="42dp"
-                    android:layout_gravity="center"
-                    android:background="#bc6ba6"
-                    android:paddingLeft="5dp"
-                    android:paddingTop="8dp"
-                    android:text="招聘"
-                    android:textAlignment="center"
-                    android:textColor="#FFFFFF"
-                    android:textSize="20dp" />
-
+            <LinearLayout style="@style/ll_sy_zp_top">
+                <ImageView android:id="@+id/ivBACK" style="@style/iv_sy_zp_back" android:src="@drawable/arrow_back" />
+                <TextView android:id="@+id/etZP" style="@style/tv_sy_zp_title" android:text="招聘" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:layout_gravity="bottom"
-                android:background="@null"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZP_FJZW"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZP_FJZW"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_zp_fjzw" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZP_FJZW"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="附近职位"
-                        android:textAlignment="center" />
-
+            <LinearLayout style="@style/ll_sy_zp_fl_row">
+                <LinearLayout android:id="@+id/llSY_ZP_FJZW" style="@style/ll_sy_zp_fl_item">
+                    <ImageView android:id="@+id/ivSY_ZP_FJZW" style="@style/iv_sy_zp_fl_item" android:src="@drawable/sy_zp_fjzw" />
+                    <TextView android:id="@+id/tvSY_ZP_FJZW" style="@style/tv_sy_zp_fl_item" android:text="附近职位" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZP_JZZW"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZP_JZZW"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_zp_jzzw" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZP_JZZW"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="急招职位"
-                        android:textAlignment="center" />
-
+                <LinearLayout android:id="@+id/llSY_ZP_JZZW" style="@style/ll_sy_zp_fl_item">
+                    <ImageView android:id="@+id/ivSY_ZP_JZZW" style="@style/iv_sy_zp_fl_item" android:src="@drawable/sy_zp_jzzw" />
+                    <TextView android:id="@+id/tvSY_ZP_JZZW" style="@style/tv_sy_zp_fl_item" android:text="急招职位" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llZP"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZP_QBZW"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_zp_qbzw" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZP_QBZW"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="全部职位"
-                        android:textAlignment="center" />
-
+                <LinearLayout android:id="@+id/llZP" style="@style/ll_sy_zp_fl_item">
+                    <ImageView android:id="@+id/ivSY_ZP_QBZW" style="@style/iv_sy_zp_fl_item" android:src="@drawable/sy_zp_qbzw" />
+                    <TextView android:id="@+id/tvSY_ZP_QBZW" style="@style/tv_sy_zp_fl_item" android:text="全部职位" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llSY_ZP_LTZGZ"
-                    android:layout_width="100dp"
-                    android:layout_height="75dp"
-                    android:layout_gravity="left|bottom"
-                    android:background="@null"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/ivSY_ZP_LTZGZ"
-                        android:layout_width="38dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center|bottom"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/sy_zp_ltzgz" />
-
-                    <TextView
-                        android:id="@+id/tvSY_ZP_LTZGZ"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:text="聊天找工作"
-                        android:textAlignment="center" />
-
+                <LinearLayout android:id="@+id/llSY_ZP_LTZGZ" style="@style/ll_sy_zp_fl_item">
+                    <ImageView android:id="@+id/ivSY_ZP_LTZGZ" style="@style/iv_sy_zp_fl_item" android:src="@drawable/sy_zp_ltzgz" />
+                    <TextView android:id="@+id/tvSY_ZP_LTZGZ" style="@style/tv_sy_zp_fl_item" android:text="聊天找工作" />
                 </LinearLayout>
-
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="410dp"
-                android:layout_height="48dp"
-                android:background="@null"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tvRMTJ"
-                    android:layout_width="80dp"
-                    android:layout_height="48dp"
-                    android:layout_marginLeft="20dp"
-                    android:background="@null"
-                    android:paddingTop="13dp"
-                    android:text="热门推荐"
-                    android:textSize="15sp" />
-
+            <LinearLayout style="@style/ll_sy_zp_cnxh_top">
+                <TextView android:id="@+id/tvRMTJ" style="@style/tv_sy_zp_cnxh_top" android:text="热门推荐" />
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/llRMTJ"
-                android:layout_width="400dp"
-                android:layout_height="match_parent"
-                android:background="@null"
-                android:orientation="vertical">
+            <LinearLayout android:id="@+id/llRMTJ" style="@style/ll_sy_zp_cnxh_content">
 
             </LinearLayout>
 
