--- a/android_app/app/src/main/res/values/yhdl.xml
+++ b/android_app/app/src/main/res/values/yhdl.xml
@@ -50,6 +50,7 @@
         <item name="android:layout_height">50dp</item>
         <item name="android:maxLines">1</item>
         <item name="android:textSize">16dp</item>
+        <item name="android:inputType">textPassword</item>
     </style>
     <style name="btn_dl">
         <item name="android:layout_width">match_parent</item>
