--- a/android_app/app/src/main/res/layout/grzx_main.xml
+++ b/android_app/app/src/main/res/layout/grzx_main.xml
@@ -12,21 +12,21 @@
             </LinearLayout>
 
             <LinearLayout style="@style/ll_content_top">
-                <LinearLayout style="@style/ll_content_top_item">
+                <LinearLayout android:id="@+id/llWDFB" style="@style/ll_content_top_item">
                     <ImageView android:id="@+id/ivWDFB" style="@style/iv_content_top_item" android:src="@drawable/grzx_wdfb" />
                     <TextView android:id="@+id/tvWDFB" style="@style/tv_content_top_item" android:text="我的发布" />
                 </LinearLayout>
-                <LinearLayout style="@style/ll_content_top_item">
+                <LinearLayout android:id="@+id/llWDSC" style="@style/ll_content_top_item">
                     <ImageView android:id="@+id/ivWDSC" style="@style/iv_content_top_item" android:src="@drawable/grzx_wdsc" />
                     <TextView android:id="@+id/tvWDSC" style="@style/tv_content_top_item" android:text="我的收藏" />
                 </LinearLayout>
-                <LinearLayout style="@style/ll_content_top_item">
-                    <ImageView android:id="@+id/ivLSJL" style="@style/iv_content_top_item" android:src="@drawable/grzx_wddy" />
-                    <TextView android:id="@+id/tvLSJL" style="@style/tv_content_top_item" android:text="我的订阅" />
+                <LinearLayout android:id="@+id/llWDDY" style="@style/ll_content_top_item">
+                    <ImageView android:id="@+id/ivWDDY" style="@style/iv_content_top_item" android:src="@drawable/grzx_wddy" />
+                    <TextView android:id="@+id/tvWDDY" style="@style/tv_content_top_item" android:text="我的订阅" />
                 </LinearLayout>
-                <LinearLayout style="@style/ll_content_top_item">
-                    <ImageView android:id="@+id/ivWDDY" style="@style/iv_content_top_item" android:src="@drawable/grzx_wdzj" />
-                    <TextView android:id="@+id/tvWDDY" style="@style/tv_content_top_item" android:text="我的足迹" />
+                <LinearLayout android:id="@+id/llWDZJ" style="@style/ll_content_top_item">
+                    <ImageView android:id="@+id/ivWDZJ" style="@style/iv_content_top_item" android:src="@drawable/grzx_wdzj" />
+                    <TextView android:id="@+id/tvWDZJ" style="@style/tv_content_top_item" android:text="我的足迹" />
                 </LinearLayout>
             </LinearLayout>
 
