--- a/android_app/app/src/main/res/values/sy_main.xml
+++ b/android_app/app/src/main/res/values/sy_main.xml
@@ -28,27 +28,28 @@
         <item name="android:orientation">horizontal</item>
     </style>
     <style name="tv_sy_main_szcs">
-        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_width">46dp</item>
         <item name="android:layout_height">42dp</item>
         <item name="android:layout_gravity">center</item>
+        <item name="android:paddingTop">10dp</item>
         <item name="android:layout_marginLeft">6dp</item>
         <item name="android:background">#ffffff</item>
-        <item name="android:paddingTop">12dp</item>
         <item name="android:textAlignment">center</item>
-        <item name="android:textSize">13dp</item>
+        <item name="android:textSize">16dp</item>
     </style>
     <style name="iv_sy_main_szcs">
-        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_width">18dp</item>
         <item name="android:layout_height">42dp</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:adjustViewBounds">true</item>
         <item name="android:background">#ffffff</item>
     </style>
     <style name="et_sy_main_szcs">
-        <item name="android:layout_width">304dp</item>
+        <item name="android:layout_width">306dp</item>
         <item name="android:layout_height">42dp</item>
+        <item name="android:paddingLeft">10dp</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:textSize">18dp</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:background">#ffffff</item>
     </style>
     <style name="iv_sy_main_sys">
