--- a/android_app/app/src/main/res/values/yhdl.xml
+++ b/android_app/app/src/main/res/values/yhdl.xml
@@ -9,7 +9,7 @@
         <item name="android:paddingBottom">@dimen/activity_vertical_margin</item>
         <item name="android:paddingLeft">@dimen/activity_horizontal_margin</item>
         <item name="android:paddingRight">@dimen/activity_horizontal_margin</item>
-        <item name="android:paddingTop">@dimen/activity_vertical_margin</item>
+        <!--<item name="android:paddingTop">@dimen/activity_vertical_margin</item>-->
         <item name="android:weightSum">1</item>
     </style>
     <style name="ll_yhdl_top">
@@ -18,17 +18,18 @@
         <item name="android:orientation">horizontal</item>
     </style>
     <style name="tv_top_gb">
-        <item name="android:layout_marginLeft">46dp</item>
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_width">20dp</item>
         <item name="android:layout_height">20dp</item>
         <item name="android:layout_gravity">left|center_vertical</item>
     </style>
     <style name="tv_top_zc">
-        <item name="android:layout_marginLeft">300dp</item>
+        <item name="android:layout_marginLeft">325dp</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">20dp</item>
+        <item name="android:layout_height">25dp</item>
         <item name="android:layout_gravity">right|center_vertical</item>
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:paddingBottom">4dp</item>
     </style>
     <style name="tv_yhdl_logo">
         <item name="android:layout_width">match_parent</item>
@@ -56,8 +57,9 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">#bc6ba6</item>
-        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginTop">20dp</item>
         <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">20dp</item>
     </style>
     <style name="ll_bottom">
         <item name="android:layout_width">441dp</item>
