--- a/android_app/app/src/main/res/values/yhzc.xml
+++ b/android_app/app/src/main/res/values/yhzc.xml
@@ -9,7 +9,7 @@
         <item name="android:paddingBottom">@dimen/activity_vertical_margin</item>
         <item name="android:paddingLeft">@dimen/activity_horizontal_margin</item>
         <item name="android:paddingRight">@dimen/activity_horizontal_margin</item>
-        <item name="android:paddingTop">@dimen/activity_vertical_margin</item>
+        <!--<item name="android:paddingTop">@dimen/activity_vertical_margin</item>-->
         <item name="android:weightSum">1</item>
     </style>
     <style name="ll_yhzc_top">
@@ -41,9 +41,10 @@
         <item name="android:textSize">16dp</item>
     </style>
     <style name="tv_yhzc_hqyzm">
-        <item name="android:layout_width">80dp</item>
-        <item name="android:layout_height">60dp</item>
-        <item name="android:textAlignment">center</item>
+        <item name="android:layout_width">125dp</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_marginTop">6dp</item>
+        <item name="android:textAlignment">textEnd</item>
         <item name="android:textSize">16dp</item>
     </style>
     <style name="et_yhzc_dtm">
@@ -63,8 +64,9 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">#bc6ba6</item>
-        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginTop">16dp</item>
         <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">20dp</item>
     </style>
     <style name="tv_zcts">
         <item name="android:layout_width">match_parent</item>
